fixing broken css code

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,34 +19,29 @@
  }
 
  .thumb {
-   height: 30vh;
    width: 30vw;
  }
 
 .logo {
   text-align: center;
-}
-
-body {
-
+  max-width: 960px;
+  margin: 0 auto;
 }
 
 .navbar {
   background-color: #7AB80D;
+}
+
+.nav-item {
   color: #000000;
 }
 
-a {
-  color: #000000;
+.item {
+  width: 20%;
+  display: inline-block;
 }
 
-.cuisine {
-  max-width: 300px;
+.item .photo {
+  height: 20vh;
+  background-size: cover;
 }
-
-.feature {
-  max-width:100%;
-}
-
-float: none;
-display: inline-block;
